@@ -1,12 +1,12 @@
 Package: Clomial
 Type: Package
 Title: Infers clonal composition of a tumor
-Version: 1.1.3
+Version: 1.1.5
 Date: 2014-02-11
 Author: Habil Zare and Alex Hu
 Maintainer: Habil Zare <zare@u.washington.edu>
 Depends: R (>= 2.10), matrixStats
-Imports: methods
+Imports: methods, permute
 Description: Clomial fits binomial distributions to counts obtained
         from Next Gen Sequencing data of multiple samples of the same
         tumor. The trained parameters can be interpreted to infer the
