@@ -4,5 +4,6 @@ export(Clomial.generate.data)
 export(Clomial.iterate)
 export(compute.bic)
 export(Clomial.likelihood)
+export(compute.errors)
 import(methods)
 import(matrixStats)
